TP-2899 Fixed sticky share bar on mobile articles.

--- a/drupal/sites/all/themes/tp4/css/styles.css
+++ b/drupal/sites/all/themes/tp4/css/styles.css
@@ -16474,13 +16474,13 @@ aside.social.social-horizontal .share-submenu-wrapper {
 /* line 434, ../sass/modules/_social-menu.scss */
 aside.social.social-horizontal .tp-social-headline {
   display: block;
-  float: left;
   vertical-align: middle;
   margin-left: 5px;
 }
 @media all and (min-width: 980px) {
   /* line 434, ../sass/modules/_social-menu.scss */
   aside.social.social-horizontal .tp-social-headline {
+    float: left;
     margin-right: 5px;
     letter-spacing: 0px;
   }
@@ -16638,14 +16638,13 @@ body.node-type-openpublish-photo-gallery aside.social .tp-social-reddit {
 
 /* line 569, ../sass/modules/_social-menu.scss */
 .social-wrapper .tap-influence-icon {
-  display: block;
   margin-top: 16px;
+  display: block;
 }
 @media all and (min-width: 480px) {
   /* line 569, ../sass/modules/_social-menu.scss */
   .social-wrapper .tap-influence-icon {
     text-align: center;
-    margin: 5px 0 0 0;
     width: 60px;
   }
 }
@@ -16654,25 +16653,24 @@ body.node-type-openpublish-photo-gallery aside.social .tp-social-reddit {
   .social-wrapper .tap-influence-icon {
     text-align: right;
     position: relative;
-    width: 40px;
     margin-top: 0px;
+    width: 40px;
   }
 }
 
-/* line 584, ../sass/modules/_social-menu.scss */
+/* line 583, ../sass/modules/_social-menu.scss */
 .social-horizontal .social-wrapper .tap-influence-icon {
-  margin-top: 0px;
   width: 35px;
 }
 @media all and (min-width: 480px) {
-  /* line 584, ../sass/modules/_social-menu.scss */
+  /* line 583, ../sass/modules/_social-menu.scss */
   .social-horizontal .social-wrapper .tap-influence-icon {
     display: block;
     width: 85px;
     display: inline-block;
   }
 }
-/* line 592, ../sass/modules/_social-menu.scss */
+/* line 590, ../sass/modules/_social-menu.scss */
 .social-horizontal .social-wrapper .tap-influence-icon h3 {
   float: left;
   text-align: center;
@@ -16680,7 +16678,7 @@ body.node-type-openpublish-photo-gallery aside.social .tp-social-reddit {
   display: inline-block;
   letter-spacing: 0px;
 }
-/* line 599, ../sass/modules/_social-menu.scss */
+/* line 597, ../sass/modules/_social-menu.scss */
 .social-horizontal .social-wrapper .tap-influence-icon:after {
   margin-top: 0px;
 }
