--- a/drupal/sites/all/themes/tp4/sass/modules/_social-menu.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_social-menu.scss
@@ -433,10 +433,10 @@ aside.social.social-horizontal{
   }
   .tp-social-headline{
     display: block;
-    float: left;
     vertical-align: middle;
     margin-left: 5px;
     @include breakpoint($breakpoint-desktop){
+      float: left;
       margin-right: 5px;
       letter-spacing: 0px;
     }
@@ -567,22 +567,20 @@ body.node-type-openpublish-photo-gallery{
 }
 
 .social-wrapper .tap-influence-icon{
+  margin-top: 16px;
   display: block;
-  margin-top:16px;
   @include breakpoint($breakpoint-phablet){
     text-align: center;
-    margin: 5px 0 0 0;
     width: 60px;
   }
   @include breakpoint($breakpoint-desktop){
     text-align: right;
     position: relative;
-    width: 40px;
     margin-top:0px;
+    width: 40px;
   }
 }
 .social-horizontal .social-wrapper .tap-influence-icon{
-  margin-top: 0px;
   width: 35px;
   @include breakpoint($breakpoint-phablet){
     display: block;
